// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<header
  className="site-head"
>
  <a
    className="site-head__title"
    href="/"
  />
  <a
    className="zbz-link ml-3"
    href="/start"
  >
    Старт
  </a>
  <a
    className="zbz-link ml-3"
    href="/upwork"
  >
    Upwork
  </a>
</header>
`;

exports[`Header renders correctly on homepage 1`] = `
<header
  className="site-head"
>
  <h1
    className="site-head__title"
  />
  <a
    className="zbz-link ml-3"
    href="/start"
  >
    Старт
  </a>
  <a
    className="zbz-link ml-3"
    href="/upwork"
  >
    Upwork
  </a>
</header>
`;

exports[`Header renders correctly on inner page 1`] = `
<header
  className="site-head"
>
  <a
    className="site-head__title"
    href="/"
  />
  <a
    className="zbz-link ml-3"
    href="/start"
  >
    Старт
  </a>
  <a
    className="zbz-link ml-3"
    href="/upwork"
  >
    Upwork
  </a>
</header>
`;
